--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-safearea-height": "^1.0.6",
     "react-native-screens": "^3.20.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^14.1.0",
     "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
