--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,9 +24,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.125.0
-
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
@@ -42,6 +39,10 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Java 툴체인 기능 비활성화
+# Java 툴체인 관련 빌드 오류를 해결하기 위함
+android.useNewJavaToolchain=false
 
 MYAPP_UPLOAD_STORE_FILE=wip230112.jks
 MYAPP_UPLOAD_KEY_ALIAS=release
