--- a/package.json
+++ b/package.json
@@ -7,42 +7,64 @@
     "ios": "react-native run-ios --simulator='iPhone 14 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "cd ios && pod deintegrate && pod install && cd ..",
+    "podstart": "cd ios && pod deintegrate && pod install && cd .. && react-native start -- --reset-cache"
   },
   "dependencies": {
-    "@react-navigation/elements": "^1.3.17",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-linear-gradient": "^2.6.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native/gradle-plugin": "^0.73.4",
+    "@react-native/metro-config": "^0.73.5",
+    "@react-navigation/elements": "^1.3.29",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/stack": "^6.3.28",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "2.15.0",
+    "react-native-gradle-plugin": "^0.71.19",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-safearea-height": "^1.0.6",
-    "react-native-screens": "^3.20.0",
+    "react-native-screens": "^3.29.0",
     "react-native-shadow-2": "^7.0.8",
-    "react-native-svg": "^14.1.0",
-    "react-native-webview": "^11.26.1"
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-touchable-scale": "^2.2.0",
+    "react-native-vision-camera": "^3.9.2",
+    "react-native-webview": "^13.8.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/runtime": "^7.24.0",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.74.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.21",
+    "@types/react-test-renderer": "^18.0.7",
+    "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.8",
-    "prettier": "^2.4.1",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "3.2.5",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "5.4.2"
   },
-  "jest": {
-    "preset": "react-native"
+  "reactNativePermissionsIOS": [
+    "Camera",
+    "MicroPhone"
+  ],
+  "engines": {
+    "node": ">=18"
   }
 }
