--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
+  "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
@@ -10,5 +11,6 @@
       "@navigation/*": ["navigation/*"],
       "@styles/*": ["styles/*"],
     }
-  }
+  },
+  "include": ["src", "**/*.tsx"]
 }
