feat: 알약 검색화면 개발
- 카메라 기능 추가 (포커싱, 줌, 촬영)
- 앨범에서 선택 추가
- 카메라 촬영 결과 화면 추가
- 알약 검색 결과 화면 추가

 #12

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
       "@screens/*": ["screens/*"],
       "@assets/*": ["assets/*"],
       "@navigation/*": ["navigation/*"],
-      "@styles/*": ["styles/*"],
+      "@styles/*": ["styles/*"]
     }
   },
-  "include": ["src", "**/*.tsx"]
+  "include": ["src", "**/*.tsx", "declarations.d.ts"]
 }
