--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.15.0",
     "react-native-gradle-plugin": "^0.71.19",
+    "react-native-haptic-feedback": "^2.2.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-safearea-height": "^1.0.6",
     "react-native-screens": "^3.29.0",
@@ -37,6 +41,7 @@
     "react-native-touchable-scale": "^2.2.0",
     "react-native-vision-camera": "^3.9.2",
     "react-native-webview": "^13.8.1",
+    "react-native-worklets-core": "^1.3.2",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
