feat: 알약 검색 로직 변경, 카메라 UI 변경
- 카메라 앞면, 뒷면 촬영 구분
- 촬영 이미지 크롭
- 앨범에서 선택 시 앞면, 뒷면 구분
- 앨범에서 선택 로직 변경
- 알약 사진(앞면, 뒷면) 이어 붙이기
- 이미지 검색 request body 변경
- 다중 알약 촬영 삭제로 인한 촬영 가이드 수정

 #12

--- a/.gitignore
+++ b/.gitignore
@@ -3115,3 +3115,9 @@ android/app/build/tmp/kotlin-classes/developDebug/META-INF/app_developDebug.kotl
 android/app/build/tmp/kotlin-classes/developDebug/com/whatispill/MainActivity.class
 android/app/build/tmp/kotlin-classes/developDebug/com/whatispill/MainApplication.class
 android/app/build/tmp/kotlin-classes/developDebug/com/whatispill/MainApplication$reactNativeHost$1.class
+android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+android/.gradle/buildOutputCleanup/cache.properties
+android/.gradle/buildOutputCleanup/outputFiles.bin
+android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+android/.gradle/buildOutputCleanup/cache.properties
+android/.gradle/buildOutputCleanup/outputFiles.bin
