--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/image-editor": "^4.2.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/gradle-plugin": "^0.73.4",
     "@react-native/metro-config": "^0.73.5",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
+    "react-native-canvas": "^0.1.39",
     "react-native-config": "^1.5.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.15.0",
@@ -48,6 +50,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-touchable-scale": "^2.2.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-vision-camera": "^4.0.5",
     "react-native-webview": "^13.8.1",
     "react-native-worklets-core": "^1.3.3",
@@ -57,7 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "@babel/runtime": "^7.24.0",
+    "@babel/runtime": "^7.24.5",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
@@ -65,6 +68,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.21",
+    "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
