--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "react-native start -- --reset-cache",
     "test": "jest",
     "pod": "cd ios && pod deintegrate && pod install && cd ..",
-    "podstart": "cd ios && pod deintegrate && pod install && cd .. && react-native start -- --reset-cache"
+    "podstart": "cd ios && pod deintegrate && pod install && cd .. && react-native start -- --reset-cache",
+    "apk": "cd android && ./gradlew assembleRelease && cd ..",
+    "aab": "cd android && ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
