feat: 앱 패키지명 변경_2
- com.whatispill -> com.mbm.whatispill

 #15

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,9 +81,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.whatispill"
+    namespace "com.mbm.whatispill"
     defaultConfig {
-        applicationId "com.whatispill"
+        applicationId "com.mbm.whatispill"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
