--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-safearea-height": "^1.0.6",
     "react-native-screens": "^3.29.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-toast-message": "^2.2.0",
