--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,7 @@ jobs:
   initialize:
     runs-on: ubuntu-24.04
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/initialize.yml
 
   build-apk:
