--- a/.github/workflows/initialize.yml
+++ b/.github/workflows/initialize.yml
@@ -6,12 +6,10 @@ on:
   workflow_call:
 
 jobs:
-  initialize:
+  get-required-files:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.inputs.branch }}
       - run: |
           echo ${{ secrets.KEY_STORE }} > ./android/app/wip240524.jks.bs64
           base64 -d ./android/app/wip240524.jks.bs64 > ./android/app/wip240524.jks
