fix: checkout 시 with 추가
#33

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - uses: ./.github/workflows/initialize.yml
 
   build-apk:
