--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,10 +9,13 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: initialize
+      - name: checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}
+
+      - name: install-library
+        run: yarn install
 
       - name: get-required-file
         run: |
