--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,12 +15,14 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
 
       - name: install-library
-        run: yarn install
+        run: npm install
 
       - name: get-required-file
         run: |
-          echo ${{ secrets.KEY_STORE }} > ./android/app/wip240524.jks.bs64
+          echo "${{ secrets.KEY_STORE }}" > ./android/app/wip240524.jks.bs64
           base64 -d ./android/app/wip240524.jks.bs64 > ./android/app/wip240524.jks
+          mkdir env
+          echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
       - name: build-apk
         run: npm run apk
