--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,7 +27,13 @@ jobs:
       - name: build-apk
         run: npm run apk
       - uses: actions/upload-artifact@v3
+        with:
+          name: apk
+          path: ./android/app/build/outputs/apk/product/release
 
       - name: build-aab
         run: npm run aab
       - uses: actions/upload-artifact@v3
+        with:
+          name: aab
+          path: ./android/app/build/outputs/bundle/productRelease
