--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,8 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}
 
