--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,9 +24,7 @@ jobs:
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
       - name: get-secret-file
-        uses: octo-org/example-repo/.github/workflows/reusable-workflow.yml@main
-        with:
-          config-path: ./.github/workflows/get-secret-file.yml
+        uses: ./.github/workflows/get-secret-file.yml
 
       - name: build-apk
         run: npm run apk
