--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: get-secret-file
         uses: ./.github/workflows/get-secret-file.yml
+        with:
+          config-path: ./.github/workflows/get-secret-file.yml
 
       - name: build-apk
         run: npm run apk
