chore: main 브랜치의 파일을 참조
#39 #40

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
       - name: get-secret-file
-        uses: YongSiHun/wip-application-v2/.github/workflows/get-secret-file.yml
+        uses: YongSiHun/wip-application-v2/.github/workflows/get-secret-file.yml@main
 
       - name: build-apk
         run: npm run apk
