--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,8 +23,7 @@ jobs:
           mkdir env
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
-      - name: get-secret-file
-        uses: YongSiHun/wip-application-v2/.github/workflows/get-secret-file.yml@main
+      - uses: YongSiHun/wip-application-v2/.github/workflows/get-secret-file.yml@main
 
       - name: build-apk
         run: npm run apk
