chore: reusable workflows should be referenced at the top-level `jobs.*.uses' key, not within steps

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
           mkdir env
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
-      - uses: YongSiHun/wip-application-v2/.github/workflows/get-secret-file.yml@main
+      - uses: YongSiHun/wip-application-v2/.github/workflows/wip-application-get-secret-file@main
 
       - name: build-apk
         run: npm run apk
