invalid value workflow reference: workflow file should have either a '.yml' or '.yaml' file extension
#39 #40

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   wip-application-get-secret-file:
-    uses: ./.github/workflows/get-secret-file
+    uses: ./.github/workflows/get-secret-file.yml
 
   build:
     runs-on: ubuntu-24.04
