fix: sed: can't read googleServiceKey.ts: No such file or directory
#39 #40

--- a/.github/workflows/get-secret-file.yml
+++ b/.github/workflows/get-secret-file.yml
@@ -13,7 +13,7 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
 
       - name: get-google-service-key
-        run: sed -i -e 's/{}/${{ secrets.GOOGLE_SERVICE_KEY }}/g' googleServiceKey.ts
+        run: sed -i -e 's/{}/${{ secrets.GOOGLE_SERVICE_KEY }}/g' ./src/secrets/googleServiceKey.ts
 
       - name: get-aes-private-key
-        run: sed -i -e 's/{}/${{ secrets.AES_KEY }}/g' googleServiceKey.ts
+        run: sed -i -e 's/{}/${{ secrets.AES_KEY }}/g' ./src/secrets/aesKey.ts
