chore: secret 참조 문제로 하드코딩으로 수정
#39 #40

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,9 +6,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  wip-application-get-secret-file:
-    uses: ./.github/workflows/get-secret-file.yml
-
   build:
     runs-on: ubuntu-24.04
     steps:
@@ -25,6 +22,12 @@ jobs:
           base64 -d ./android/app/wip240524.jks.bs64 > ./android/app/wip240524.jks
           mkdir env
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
+
+      - name: get-google-service-key
+        run: sed -i -e 's/{}/${{ secrets.GOOGLE_SERVICE_KEY }}/g' ./src/secrets/googleServiceKey.ts
+  
+      - name: get-aes-private-key
+        run: sed -i -e 's/{}/${{ secrets.AES_KEY }}/g' ./src/secrets/aesKey.ts
 
       - name: build-apk
         run: npm run apk
