fix: sed 대신 rm 후 생성으로 변경
#39 #40

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,10 +24,14 @@ jobs:
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
       - name: get-google-service-key
-        run: sed -i 's/{}/${{ secrets.GOOGLE_SERVICE_KEY }}/g' ./src/secrets/googleServiceKey.ts
-  
+        run: |
+          rm -f ./src/secrets/googleServiceKey.ts
+          echo "${{ secrets.GOOGLE_SERVICE_KEY }}" > ./src/secrets/googleServiceKey.ts
+
       - name: get-aes-private-key
-        run: sed -i 's/{}/${{ secrets.AES_KEY }}/g' ./src/secrets/aesKey.ts
+        run: |
+          rm -f ./src/secrets/aesKey.ts 
+          echo "${{ secrets.AES_KEY }}" > ./src/secrets/aesKey.ts
 
       - name: build-apk
         run: npm run apk
