--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
           echo "${{ secrets.KEY_STORE }}" > ./android/app/wip240524.jks.bs64
           base64 -d ./android/app/wip240524.jks.bs64 > ./android/app/wip240524.jks
 
-      - name: get-environment-and-configs
+      - name: get-config
         run: |
           mkdir env
           echo "${{ secrets.CONFIG }}" > ./env/config.json
