--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-super-grid": "^5.1.0",
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-toast-message": "^2.2.0",
