--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,9 +23,18 @@ jobs:
 
       - name: get-config
         run: |
-          mkdir env
-          echo "${{ secrets.CONFIG }}" > ./env/config.json
-          echo "${{ secrets.GOOGLE_CLOUD_SERVICE_KEY }}" > ./env/google_cloud_service_key.json
+          cat <<EOL > ./env/.env
+          RESOURCE_AES_KEY="${{ secrets.RESOURCE_AES_KEY }}"
+          RESOURCE_AES_IV="${{ secrets.RESOURCE_AES_IV }}"
+          GOOGLE_CLOUD_RSA_PUB_KEY="${{ secrets.GOOGLE_CLOUD_RSA_PUB_KEY }}"
+          GOOGLE_CLOUD_INIT_INFO_URL="${{ secrets.GOOGLE_CLOUD_INIT_INFO_URL }}"
+          GOOGLE_CLOUD_DL_SERVER_URL="${{ secrets.GOOGLE_CLOUD_DL_SERVER_URL }}"
+          CLOUD_FLARE_RESOURCE_DOWNLOAD_URL="${{ secrets.CLOUD_FLARE_RESOURCE_DOWNLOAD_URL }}"
+          CLOUD_FLARE_RESOURCE_BUCKET="${{ secrets.CLOUD_FLARE_RESOURCE_BUCKET }}"
+          CLOUD_FLARE_TOKEN_VALUE="${{ secrets.CLOUD_FLARE_TOKEN_VALUE }}"
+          CLOUD_FLARE_ACCESS_KEY_ID="${{ secrets.CLOUD_FLARE_ACCESS_KEY_ID }}"
+          CLOUD_FLARE_SECRET_ACCESS_KEY="${{ secrets.CLOUD_FLARE_SECRET_ACCESS_KEY }}"
+          EOL
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
       - name: build-apk
