fix: env 디렉터리 없어서 발생하는 문제 수정

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: get-config
         run: |
+          mkdir ./env
           cat <<EOL > ./env/.env
           RESOURCE_AES_KEY="${{ secrets.RESOURCE_AES_KEY }}"
           RESOURCE_AES_IV="${{ secrets.RESOURCE_AES_IV }}"
