add: 알약 상세 검색을 위해 환경변수 추가

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,14 +27,21 @@ jobs:
           cat <<EOL > ./env/.env
           RESOURCE_AES_KEY="${{ secrets.RESOURCE_AES_KEY }}"
           RESOURCE_AES_IV="${{ secrets.RESOURCE_AES_IV }}"
+
           GOOGLE_CLOUD_RSA_PUB_KEY="${{ secrets.GOOGLE_CLOUD_RSA_PUB_KEY }}"
           GOOGLE_CLOUD_INIT_INFO_URL="${{ secrets.GOOGLE_CLOUD_INIT_INFO_URL }}"
           GOOGLE_CLOUD_DL_SERVER_URL="${{ secrets.GOOGLE_CLOUD_DL_SERVER_URL }}"
+
           CLOUD_FLARE_RESOURCE_DOWNLOAD_URL="${{ secrets.CLOUD_FLARE_RESOURCE_DOWNLOAD_URL }}"
           CLOUD_FLARE_RESOURCE_BUCKET="${{ secrets.CLOUD_FLARE_RESOURCE_BUCKET }}"
           CLOUD_FLARE_TOKEN_VALUE="${{ secrets.CLOUD_FLARE_TOKEN_VALUE }}"
           CLOUD_FLARE_ACCESS_KEY_ID="${{ secrets.CLOUD_FLARE_ACCESS_KEY_ID }}"
           CLOUD_FLARE_SECRET_ACCESS_KEY="${{ secrets.CLOUD_FLARE_SECRET_ACCESS_KEY }}"
+
+          GET_DRUG_PRDT_PRMSN_DTL_INQ="${{ secrets.GET_DRUG_PRDT_PRMSN_DTL_INQ }}"
+          DRUG_PRDT_PRMSN_INFO_SERVICE="${{ secrets.DRUG_PRDT_PRMSN_INFO_SERVICE }}"
+          PERM_ENC_SERVICE_KEY="${{ secrets.PERM_ENC_SERVICE_KEY }}"
+          PERM_DEC_SERVICE_KEY="${{ secrets.PERM_DEC_SERVICE_KEY }}"
           EOL
           echo "${{ secrets.ENV_PRODUCTION }}" > env/.env.production
 
