env: realm env 추가

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,8 @@ jobs:
           RESOURCE_AES_KEY="${{ secrets.RESOURCE_AES_KEY }}"
           RESOURCE_AES_IV="${{ secrets.RESOURCE_AES_IV }}"
 
+          REALM_ENCRYPTION_KEY="${{ secrets.REALM_ENCRYPTION_KEY }}"
+
           GOOGLE_CLOUD_RSA_PUB_KEY="${{ secrets.GOOGLE_CLOUD_RSA_PUB_KEY }}"
           GOOGLE_CLOUD_INIT_INFO_URL="${{ secrets.GOOGLE_CLOUD_INIT_INFO_URL }}"
           GOOGLE_CLOUD_DL_SERVER_URL="${{ secrets.GOOGLE_CLOUD_DL_SERVER_URL }}"
