feat: DB, 검색, api 기능 추가 개선 및 화면 구조 변경 - 필요 라이브러리 추가 - 안드로이드 메모리 관련 변경: largeheap
- DB -
- 알약 DB 내장 realm 사용
- .realm 확장자 다운로드 및 upsert를 통한 내장 DB 적용

- 검색 -
- 식별 검색 기능 추가
- 검색 결과 로직을 기존 이미지 검색 기능과 동일하게 적용
- 검색 결과 페이지네이션 추가
- 검색 query 추가

- api -
- 이미지 검색, detail api 변경

- 화면 구조 -
- Home 단일 검색 버튼을 식별, 이미지 검색 버튼으로 분할
- Home 여백 축소
- Home, DB 업데이트 화면에서 뒤로가기 앱 종료 기능 추가

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
 project.ext.envConfigFiles = [
-    debug: "env/.env.development",
-    release: "env/.env.production",
-    developdebug: "env/.env.development",
-    productdebug: "env/.env.production",
+    debug: "env/.env",
+    release: "env/.env",
+    developdebug: "env/.env",
+    productdebug: "env/.env",
     anothercustombuild: ".env",
 ]
 
@@ -127,6 +127,9 @@ android {
             product {
             }
         }
+    packagingOptions{
+        pickFirst '**/libcrypto.so'
+    }
 }
 
 dependencies {
