--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,6 @@ project(':react-native-worklets-core').projectDir = new File(rootProject.project
 
 include ':react-native-config'
 project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
+
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
