--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "aab": "cd android && ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.0",
+    "@craftzdog/react-native-buffer": "^6.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/image-editor": "^4.2.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -28,22 +30,31 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
+    "@realm/react": "^0.11.0",
+    "@types/lodash": "^4.17.13",
     "axios": "^1.7.1",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-canvas": "^0.1.39",
     "react-native-config": "^1.5.1",
+    "react-native-exit-app": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.15.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-progress": "^5.0.1",
+    "react-native-quick-base64": "^2.1.2",
+    "react-native-quick-crypto": "^0.7.5",
     "react-native-reanimated": "^3.11.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-safearea-height": "^1.0.6",
     "react-native-screens": "^3.29.0",
@@ -54,12 +65,15 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-touchable-scale": "^2.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-vision-camera": "^4.0.5",
+    "react-native-vision-camera": "^4.6.1",
     "react-native-webview": "^13.8.1",
     "react-native-worklets-core": "^1.3.3",
     "react-native-xml2js": "^1.0.3",
-    "recoil": "^0.7.7"
+    "realm": "^12.13.1",
+    "recoil": "^0.7.7",
+    "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
