--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
-    "@realm/react": "^0.11.0",
+    "@realm/react": "^0.9.0",
+    "@shopify/flash-list": "^1.7.2",
     "@types/lodash": "^4.17.13",
     "axios": "^1.7.1",
     "dayjs": "^1.11.13",
@@ -67,11 +68,11 @@
     "react-native-touchable-scale": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-view-shot": "^3.8.0",
-    "react-native-vision-camera": "^4.6.1",
+    "react-native-vision-camera": "^4.3.1",
     "react-native-webview": "^13.8.1",
     "react-native-worklets-core": "^1.3.3",
     "react-native-xml2js": "^1.0.3",
-    "realm": "^12.13.1",
+    "realm": "^12.10.0",
     "recoil": "^0.7.7",
     "web-streams-polyfill": "^4.0.0"
   },
