feat, fix: 문구 수정, xml 파싱 개선, 앨범 유틸 변경 - 홈 복용법 문구 변경 - 검색 결과 첨가제 -> 분류명
- html entity decode
- xml 파싱 변경

- id 검색 '*,?' 문자 경고 표시
- '*,?' 문자 포함시 검색 :x:

- 검색 시 데이터 처리방식 변경 (이미지 및 id 검색)
    - Recoil 적용

- 앨범 선택시 Photo picker 표시 (Android)
    - 해당 build.gradle 추가

- DB 업데이트 속도 개선 (비동기 처리)

- ios 권한 추가 (PhotoLibrary)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
     implementation project(':react-native-worklets-core')
+    implementation("androidx.activity:activity:1.9.+")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
