--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,7 +29,7 @@ setup_permissions([
   # 'Microphone',
   # 'Motion',
   # 'Notifications',
-  # 'PhotoLibrary',
+  'PhotoLibrary',
   # 'PhotoLibraryAddOnly',
   # 'Reminders',
   # 'Siri',
