--- a/ios/whatispill/Info.plist
+++ b/ios/whatispill/Info.plist
@@ -33,6 +33,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>'이게뭐약'에서 알약을 촬영하여 검색하기 위해 카메라 권한이 필요합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>'이게뭐약'에서 알약 검색에 필요한 이미지를 가져오기 위해 사진 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UIAppFonts</key>
