--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "@types/lodash": "^4.17.13",
     "axios": "^1.7.1",
     "dayjs": "^1.11.13",
+    "fast-xml-parser": "^4.5.1",
+    "he": "^1.2.0",
     "lodash": "^4.17.21",
+    "p-limit": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
@@ -47,7 +50,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-haptic-feedback": "^2.2.0",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-permissions": "^4.1.5",
@@ -100,7 +103,7 @@
   },
   "reactNativePermissionsIOS": [
     "Camera",
-    "MicroPhone"
+    "PhotoLibrary"
   ],
   "engines": {
     "node": ">=18"
