--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@screens/*": ["screens/*"],
       "@assets/*": ["assets/*"],
       "@navigation/*": ["navigation/*"],
-      "@styles/*": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "@api/*": ["api/*"]
     }
   },
   "include": [
