feat: 앱 버전 변경 v2.0 > v2.1, 불필요한 라이브러리 삭제 - 앱 버전 변경 v2.0 > v2.1 (android) - 앱 버전 관리용 라이브러리 추가(react-native-version-check)
- 불필요한 라이브러리 및 파일 삭제

- 이미지 검색 '개발 중' 문구 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,5 @@
       "@api/*": ["api/*"]
     }
   },
-  "include": [
-    "src",
-    "**/*.tsx",
-    "declarations.d.ts",
-    "react-native-xml2js.d.ts"
-  ]
+  "include": ["src", "**/*.tsx", "declarations.d.ts"]
 }
