--- a/package.json
+++ b/package.json
@@ -70,11 +70,11 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-touchable-scale": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-version-check": "^3.4.7",
     "react-native-view-shot": "^3.8.0",
     "react-native-vision-camera": "^4.3.1",
     "react-native-webview": "^13.8.1",
     "react-native-worklets-core": "^1.3.3",
-    "react-native-xml2js": "^1.0.3",
     "realm": "^12.10.0",
     "recoil": "^0.7.7",
     "web-streams-polyfill": "^4.0.0"
@@ -91,6 +91,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.21",
     "@types/react-native-canvas": "^0.1.13",
+    "@types/react-native-version-check": "^3.4.8",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
