--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,12 +43,12 @@ jobs:
         run: npm run apk
       - uses: actions/upload-artifact@v4
         with:
-          name: apk
+          name: "wip-${{ github.ref_name }}-${{ github.run_number }}-apk"
           path: ./android/app/build/outputs/apk/product/release
 
       - name: build-aab
         run: npm run aab
       - uses: actions/upload-artifact@v4
         with:
-          name: aab
+          name: "wip-${{ github.ref_name }}-${{ github.run_number }}-aab"
           path: ./android/app/build/outputs/bundle/productRelease
