--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "p-limit": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.73.6",
     "react-native-canvas": "^0.1.39",
     "react-native-config": "^1.5.1",
     "react-native-exit-app": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.15.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-google-mobile-ads": "^14.8.1",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.2.3",
