--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
 
       - name: install-library
-        run: npm install
+        run: yarn install
 
       - name: get-key-store
         run: |
@@ -40,14 +40,14 @@ jobs:
           EOL
 
       - name: build-apk
-        run: npm run apk
+        run: yarn apk
       - uses: actions/upload-artifact@v4
         with:
           name: "wip-${{ github.ref_name }}-${{ github.run_number }}-apk"
           path: ./android/app/build/outputs/apk/product/release
 
       - name: build-aab
-        run: npm run aab
+        run: yarn aab
       - uses: actions/upload-artifact@v4
         with:
           name: "wip-${{ github.ref_name }}-${{ github.run_number }}-aab"
