build: .env 파일 위치를 프로젝트 루트로 변경 (표준 관행 및 XCode 빌드 시 환경변수 설정 필요로 인함함)
#67

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
       - name: get-config
         run: |
           mkdir ./env
-          cat <<EOL > ./env/.env
+          cat <<EOL > .env
           REALM_ENCRYPTION_KEY="${{ secrets.REALM_ENCRYPTION_KEY }}"
 
           GOOGLE_CLOUD_RSA_PUB_KEY="${{ secrets.GOOGLE_CLOUD_RSA_PUB_KEY }}"
