feat: iOS 빌드 테스트 CI 구현
- github action CI 시 yarn berry 적용

#69

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,9 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
 
       - name: install-library
-        run: yarn install
+        run: |
+          yarn set version berry
+          yarn install
 
       - name: get-key-store
         run: |
