fix: iOS 빌드 테스트 CI 빌드 오류 수정
- gui가 아닌 cui에서 빌드가 진행되도록 수정

#69

--- a/.github/workflows/ios_build_test.yml
+++ b/.github/workflows/ios_build_test.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Run app
         run: |
-          yarn ios
+          xcodebuild -workspace ios/whatispill.xcworkspace -scheme whatispill_production -configuration Release
           tail -n 50 /tmp/ios-build.log
