fix: iOS 빌드 테스트 CI 빌드 오류 수정
#69

--- a/.github/workflows/ios_build_test.yml
+++ b/.github/workflows/ios_build_test.yml
@@ -46,5 +46,5 @@ jobs:
 
       - name: Run app
         run: |
-          xcodebuild -workspace ios/whatispill.xcworkspace -scheme whatispill_production -configuration Release
+          xcodebuild -scheme whatispill_production
           tail -n 50 /tmp/ios-build.log
