--- a/.github/workflows/ios_build_test.yml
+++ b/.github/workflows/ios_build_test.yml
@@ -46,5 +46,5 @@ jobs:
 
       - name: Run app
         run: |
-          xcodebuild -scheme whatispill_production
+          xcodebuild -workspace ios/whatispill.xcworkspace -scheme whatispill_production
           tail -n 50 /tmp/ios-build.log
