feat: iOS ipa 빌드 CI 추가
- ipa 파일이 생성되도록 package.json 스크립트 수정
- 불필요해진 iOS 빌드 테스트 CI 제거

#69

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "podstart": "cd ios && pod deintegrate && pod install && cd .. && react-native start -- --reset-cache",
     "apk": "cd android && ./gradlew assembleRelease && cd ..",
     "aab": "cd android && ./gradlew bundleRelease && cd ..",
-    "ipa": "npm run ios -- --mode=\"Release\"",
+    "ipa": "xcodebuild -workspace ios/whatispill.xcworkspace -scheme whatispill_production -sdk iphoneos -configuration Release -archivePath build/whatispill.xcarchive archive && xcodebuild -exportArchive -archivePath build/whatispill.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath build/",
     "reset:android": "bash ./reset_build_cache.sh android",
     "reset:ios": "bash ./reset_build_cache.sh ios"
   },
