build: 버저닝 도입
- apk / aab / ipa로 빌드 시 package.json에 명시된 버전과 빌드 번호로 빌드 파일명을 명명하도록 개선
- 안드로이드 및 ios github action yml 파일 가독성 개선

#76

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,6 @@
 name: wip-android
 
-run-name: ${{ github.actor }}-android
+run-name: wip-android-build
 
 on:
   workflow_dispatch:
@@ -41,16 +41,23 @@ jobs:
           CLOUD_FLARE_SECRET_ACCESS_KEY="${{ secrets.CLOUD_FLARE_SECRET_ACCESS_KEY }}"
           EOL
 
-      - name: build-apk
-        run: yarn apk
-      - uses: actions/upload-artifact@v4
-        with:
-          name: "wip-${{ github.ref_name }}-${{ github.run_number }}-apk"
-          path: ./android/app/build/outputs/apk/product/release
+      - name: versioning
+        run: |
+          apt install -y jq
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: build-aab
-        run: yarn aab
+      - name: build
+        run: |
+          pushd ./android
+          ./gradlew assembleRelease
+          mv ./app/build/outputs/apk/release/app-product-release.apk ./app/build/outputs/apk/release/wip-$VERSION-${{ github.run_number }}.apk
+          ./gradlew bundleRelease
+          mv ./app/build/outputs/bundle/productRelease/app-product-release.aab ./app/build/outputs/bundle/productRelease/wip-$VERSION-${{ github.run_number }}.aab
+          popd
       - uses: actions/upload-artifact@v4
         with:
-          name: "wip-${{ github.ref_name }}-${{ github.run_number }}-aab"
-          path: ./android/app/build/outputs/bundle/productRelease
+          name: wip-${{ env.VERSION  }}-${{ github.run_number }}
+          path: |
+            ./android/app/build/outputs/apk/release/wip-${{ env.VERSION  }}-${{ github.run_number }}.apk
+            ./android/app/build/outputs/bundle/productRelease/wip-${{ env.VERSION  }}-${{ github.run_number }}.aab
