fix: github action 빌드 오류 수정

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: versioning
         run: |
-          apt install -y jq
+          sudo apt install -y jq
           VERSION=$(jq -r '.version' package.json)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
