--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.73.6",
     "react-native-canvas": "^0.1.39",
     "react-native-config": "^1.5.1",
+    "react-native-device-info": "^14.0.4",
     "react-native-exit-app": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.15.0",
@@ -49,6 +50,7 @@
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.2.3",
+    "react-native-in-app-review": "^4.3.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-permissions": "^4.1.5",
