--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,8 +85,8 @@ android {
         applicationId "com.mbm.whatispill"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "2.1"
+        versionCode 7
+        versionName "2.1.0-13"
     }
     signingConfigs {
         debug {
