feat: 데이터베이스 리소스 업데이트 지원하도록 개선 / 배포된 스키마로 동기화
#88

--- a/package.json
+++ b/package.json
@@ -108,6 +108,6 @@
   },
   "packageManager": "yarn@4.9.1",
   "config": {
-    "databaseResourceVersion": "2_20250705"
+    "databaseResourceVersion": "2_20250705_main"
   }
 }
