--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-image-crop-picker": "0.42.0",
     "react-native-image-picker": "^7.2.3",
     "react-native-in-app-review": "^4.3.5",
     "react-native-linear-gradient": "^2.8.3",
@@ -72,7 +73,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-version-check": "^3.4.7",
     "react-native-view-shot": "^3.8.0",
-    "react-native-vision-camera": "^4.3.1",
+    "react-native-vision-camera": "4.3.1",
     "react-native-webview": "^13.8.1",
     "react-native-worklets-core": "^1.3.3",
     "realm": "^12.10.0",
