feat: 리소스 업데이트 종속성 제거
- 코드 리뷰 반영

#88

--- a/package.json
+++ b/package.json
@@ -107,8 +107,5 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@4.9.1",
-  "config": {
-    "databaseResourceVersion": "2_20250705_main"
-  }
+  "packageManager": "yarn@4.9.1"
 }
