--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "reset:android": "bash ./reset_build_cache.sh android",
     "reset:ios": "bash ./reset_build_cache.sh ios",
     "prepare": "husky install",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.658.0",
